# vkget

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  navigationlog.h  task.cpp  task.h  taskgroup.cpp  taskgroup.h  utilities.cpp  utilities.h
app/icons/breeze/: index.theme
app/qml/: main.qml  qml.qrc
app/qml/components/: AudiosView.qml  DownloadsView.qml  Navigation.qml  PlaybackControl.qml  UsersView.qml
itemmodel/: CMakeLists.txt  basicitem.cpp  basicitem.h  basicitemmodel.cpp  basicitemmodel.h  threadsafenode.h
tests/: CMakeLists.txt  testapp.cpp  testbasicitemmodel.cpp  testmainwindow.cpp  testvk.cpp
vk/: CMakeLists.txt  downloadmanager.cpp  downloadmanager.h  login.qml  login.qrc  main.cpp  nativelogin.qml  nativelogin.qrc  playlist.cpp  playlist.h  sectionmanager.cpp  sectionmanager.h  vkitem.h  vkitemmodel.cpp  vkitemmodel.h  vklogindialog.cpp  vklogindialog.h  vklogindialogqml.cpp  vklogindialogqml.h  vkontakte.cpp  vkontakte.h  vkresponse.cpp  vkresponse.h
